--- a/Pilloud/src/main/webapp/resources/css/shapeSear.css
+++ b/Pilloud/src/main/webapp/resources/css/shapeSear.css
@@ -1,4 +1,4 @@
-body {
+html, body {
 	border-left-width: 1px;
 	border-left-style: solid;
 	border-left-color: #ddd;
@@ -17,22 +17,12 @@ hr {
 	border-color: lightgrey;
 	height: 1px;
 }
-
-header {
+#searcher {
 	position: fixed;
 	top: 0;
 	height: 50px;
 	width: 500px;
 	background-color: #C4D89D;
-}
-
-input {
-	padding: 8px 8px 8px 12px;
-	margin: 10px 10px 0px 10px;
-	width: 380px;
-	float: right;
-	border-radius: 10px;
-	border: 1px solid #C4D89D;
 }
 
 #arrow {
@@ -41,7 +31,11 @@ input {
 	height: 20px;
 	margin: 18px 0px 10px 15px;
 }
-
+.title {
+	float : right;
+	margin : 15px 190px 0px 0px;
+	color : white;
+}
 #icon {
 	position: absolute;
 	width: 18px;
@@ -58,28 +52,58 @@ input {
 	margin: 18px 0px 10px 15px;
 }
 
-select {
-	margin: 70px 0px 0px 45px;
+.select {
+	margin-top : 50px;
 }
 
 select img {
-	width: 50px;
+	width: 20px;
 }
 
-#shape_sel, #formul_sel, #div_sel {
+#shape_sel{
 	width: 400px;
 	padding: 10px 0px 10px 10px;
-	border-radius: 10px;
+	border-radius: 5px;
+	margin: 30px 0px 0px 45px;
 }
 
-footer {
+#formul_sel, #div_sel {
+	width: 400px;
+	padding: 10px 0px 10px 10px;
+	border-radius: 5px;
+	margin: 20px 0px 0px 45px;
+}
+#shape_sel:hover, #formul_sel:hover, #div_sel:hover {
+	border : 2px solid #C4D89D
+}
+.select option {
+	border-radius : 10px;
+}
+
+.select input[type=button] {
+	text-align : center;
+	width : 390px;
+	padding : 10px;
+	margin : 50px 0px 0px 45px;
+	border: 0px;
+    border-radius : 20px;
+	background-color: #C4D89D;
+    color: #fff;
+    font-size : 15px;
+    font-weight : bolder;
+}
+
+
+
+/* ÇÏ´Ü¹Ù */
+.footer {
 	position: fixed;
 	bottom: 0;
 	height: 70px;
 	width: 500px;
 }
 
-footer img {
+.home {
 	width: 50px;
 	margin: 0px 0px 0px 10px;
 }
