--- a/Pilloud/src/main/webapp/resources/css/modify.css
+++ b/Pilloud/src/main/webapp/resources/css/modify.css
@@ -4,20 +4,38 @@ html, body {
 	border-left: solid 1px #ddd;
 	border-right: solid 1px #ddd;
 	margin: 0 auto;
-	width: 620px;
+	width: 500px;
 	height: 100%;
 	overflow: auto;
 }
 
-.header {
-	text-align: center;
+header {
+	/* position: fixed; */
+	top: 0;
+	height: 50px;
+	width: 500px;
+	background-color: white;
+	border-bottom : 1px solid lightgrey;
 }
 
-h3 {
-/* 	text-align: center; */
+#arrow {
+	float: left;
+	width: 25px;
+	height: 20px;
+	margin: 16px 0px 10px 15px;
+}
+
+.title {
+	float : right;
+	margin : 15px 200px 0px 0px;
+	font-weight: bold;
+}
+
+/* h3 {
+	text-align: center;
  	display: inline-block;
-/* 	left: 50%;
-	right: 50%; */
+	left: 50%;
+	right: 50%;
 }
 
 img {
@@ -25,8 +43,8 @@ img {
 	width: 40px;
 	height: 40px;
  	top: 10px;
-/*  	left: -200px; */
-}
+ 	left: -200px;
+} */
 
 .basic {
 	border: 1px solid;
@@ -103,7 +121,7 @@ img {
 	border: none;
 	left: 0;
 	right: 0;
-	width: 603px;
+	width: 483px;
 	height: 4rem;
 	margin-top: 30px;
 	font-weight: 600;
