--- a/Pilloud/src/main/webapp/resources/css/signup.css
+++ b/Pilloud/src/main/webapp/resources/css/signup.css
@@ -4,25 +4,24 @@ html, body {
 	border-left: solid 1px #ddd;
 	border-right: solid 1px #ddd;
 	margin: 0 auto;
-	width: 620px;
+	width: 500px;
 	height: 100%;
 	overflow: hidden;
 }
 
-img {
+.logo {
 	display: block;
 	margin: auto;
 	width: 100px;
 	height: 100px;
 	position: relative;
 	top: 30px;
-	
 }
 
 form {
 	text-align: center;
 	position: relative;
-	top: 70px;
+	top: 50px;
 }
 
 h4 {
@@ -94,4 +93,16 @@ input {
     font-family: "paybooc-Light", sans-serif;
     text-decoration: none;
     font-weight: 600;
+}
+
+footer {
+	position: fixed;
+	bottom: 0;
+	height: 70px;
+	width: 500px;
+}
+
+footer img {
+	width: 50px;
+	margin: 0px 0px 0px 10px;
 }
