--- a/Pilloud/src/main/webapp/resources/css/signup.css
+++ b/Pilloud/src/main/webapp/resources/css/signup.css
@@ -107,7 +107,11 @@ footer img {
 	width: 50px;
 	margin: 0px 0px 0px 10px;
 } 
- 
+/* 아이디를 입력하지않은 경우 */
+.id_input_re_0{
+	color : red;
+	display : none;
+}
 /* 중복아이디 존재하지 않는경우 */
 .id_input_re_1{
 	color : green;
