--- a/Pilloud/src/main/webapp/resources/css/signup.css
+++ b/Pilloud/src/main/webapp/resources/css/signup.css
@@ -5,8 +5,8 @@ html, body {
 	border-right: solid 1px #ddd;
 	margin: 0 auto;
 	width: 500px;
-	height: 100%;
-	overflow: hidden;
+ 	height: 100%;
+	overflow: auto;
 }
 
 .logo {
@@ -45,8 +45,8 @@ input {
 	left: -110px;
 }
 
-#cb1,
-#cb2 {
+.cb1,
+.cb2 {
 	display: inline-block;
 	width: 15px;
 	height: 15px;
@@ -78,18 +78,20 @@ input {
 	width: 220px;
 }
 
-#pw, 
-#pwpw,
-#nm,
-#birth,
-#em {
+.pw, 
+.pwpw,
+.nm,
+.birth,
+.em,
+.phone {
 	width: 300px;
 }
 
-.signBtn {
+.signupBtn {
     border: none;
     display: inline-block;
     padding: 15px 30px;
+    margin-bottom: 90px;
     border-radius: 15px;
     font-family: "paybooc-Light", sans-serif;
     text-decoration: none;
