--- a/Pilloud/src/main/webapp/resources/css/list.css
+++ b/Pilloud/src/main/webapp/resources/css/list.css
@@ -1,3 +1,4 @@
+@charset "EUC-KR";
 html, body {
 	border-left-width: 1px;
 	border-left-style: solid;
@@ -46,6 +47,30 @@ p {
 	border-bottom:1px solid lightgrey;
 	width : 100%;
 	padding : 0px 0px 10px 0px;
+}
+#pillList ul{
+	list-style:none;
+	display : block;
+	padding : 0px 0px 10px 40px;
+}
+#pillList ul li {
+	display : inline-block;
+}
+.company {
+	text-align : left;
+	margin-left : 50px;
+	font-size : 13px;
+}
+.title {
+	text-align : left;
+	margin-left : 50px;
+	margin-top:10px;
+	font-size : 20px;
+	font-weight : bold;
+}
+#next {
+	margin-left:170px;
+	margin-bottom : 10px;
 }
 
 #icon {
