조성규 커밋
1. 의약품명으로 검색시 의약품 리스트 화면에 출력(css 스크롤추가)
2. 모양으로 검색시 의약품 리스트 화면에 출력(css 스크롤추가)

--- a/Pilloud/src/main/webapp/resources/css/list.css
+++ b/Pilloud/src/main/webapp/resources/css/list.css
@@ -9,7 +9,7 @@ html, body {
 	margin: 0 auto;
 	width: 500px;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;  
 }
 hr {
 	border-width : 1px 0px 0px 0px; 
