--- a/Pilloud/src/main/webapp/resources/css/pillSear.css
+++ b/Pilloud/src/main/webapp/resources/css/pillSear.css
@@ -47,7 +47,26 @@ p {
 	width : 100%;
 	padding : 0px 0px 10px 0px;
 }
-
+#pillList ul{
+	list-style:none;
+	display : block;
+	padding : 0px 0px 10px 40px;
+}
+#pillList ul li {
+	display : inline-block;
+}
+.company {
+	text-align : left;
+	margin-left : 50px;
+	font-size : 13px;
+}
+.title {
+	text-align : left;
+	margin-left : 50px;
+	margin-top:10px;
+	font-size : 20px;
+	font-weight : bold;
+}  
 #icon {
 	position: absolute;
 	width: 18px;
