--- a/Pilloud/src/main/webapp/resources/css/agree.css
+++ b/Pilloud/src/main/webapp/resources/css/agree.css
@@ -37,13 +37,14 @@ h4 {
 }
 
 .text1 {
-	width: 450px;
-	height: 200px;
- 	border: solid 2px;
-	color: #e9e9e9;
-	box-shadow: 0px 0px 10px #e9e9e9;
-	margin:0 20px 0 20px; 
-}
+    width: 450px;
+    height: 200px;
+    border: solid 2px;
+    color: #000000;
+    box-shadow: 0px 0px 10px #e9e9e9;
+    margin: 0 20px 0 20px;
+    white-space: pre-wrap; /* 공백과 줄 바꿈 유지 */
+}   
 
 .text2 {
 	width: 450px;
