--- a/Pilloud/src/main/webapp/resources/css/agree.css
+++ b/Pilloud/src/main/webapp/resources/css/agree.css
@@ -68,6 +68,7 @@ h4 {
     text-decoration: none;
     font-weight: 600;
     margin: 30px 164px;
+    color: #ffffff;
 }
 .btnCheck {
 	background-color : #C4D89D;
