--- a/Pilloud/src/main/webapp/resources/css/main.css
+++ b/Pilloud/src/main/webapp/resources/css/main.css
@@ -57,11 +57,11 @@ input {
 	margin: 30px 20px 0px 0px;
 }
 footer{
-	position : fixed;
-	bottom :0; 
-	height:70px;
-	width : 500px;
-	background-color : white;
+	position: fixed;
+	bottom: 0;
+	height: 70px;
+	width: 499px;
+ 	background-color: #ffffff;
 }
 
 footer img {
