--- a/Pilloud/src/main/webapp/resources/css/signup.css
+++ b/Pilloud/src/main/webapp/resources/css/signup.css
@@ -7,7 +7,13 @@ html, body {
 	width: 500px;
  	height: 100%;
 	overflow: auto;
+	
+	-ms-overflow-style: none;
 }
+
+::-webkit-scrollbar {
+	display: none;
+} 
 
 .logo {
 	display: block;
@@ -23,6 +29,14 @@ form {
 	text-align: center;
 	position: relative;
 	top: 50px;
+}
+
+#checkIdBtn {
+	background-color: #C4D89D;
+	border: none;
+	height: 25px;
+	border-radius: 3px;
+	color: #ffffff;
 }
 
 h4 {
@@ -96,13 +110,16 @@ input {
     font-family: "paybooc-Light", sans-serif;
     text-decoration: none;
     font-weight: 600;
+    background-color: #C4D89D;
+    color: #ffffff;
 }
  
  footer {
-	position: fixed;
+ 	position: fixed;
 	bottom: 0;
 	height: 70px;
-	width: 500px;
+	width: 499px;
+ 	background-color: #ffffff;
 }
 
 footer img {
