--- a/Pilloud/src/main/webapp/resources/css/termsOfService.css
+++ b/Pilloud/src/main/webapp/resources/css/termsOfService.css
@@ -13,22 +13,21 @@ header {
 	position: fixed;
 	top: 0;
 	height: 50px;
-	width: 500px;
-	background-color: white;
-	border-bottom : 1px solid lightgrey;
+	width: 499px;
+	background-color: #C4D89D;
 }
 
 #arrow {
 	float: left;
 	width: 25px;
 	height: 20px;
-	margin: 16px 0px 10px 15px;
+	margin: 18px 0px 10px 15px;
 }
 
 .title {
 	float : right;
 	margin : 15px 215px 0px 0px;
-	font-weight: bold;
+	color : white;
 }
 
 .container {
@@ -44,7 +43,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	height: 70px;
-	width: 500px;
+	width: 499px;
 }
 
 footer img {
