--- a/Pilloud/src/main/webapp/resources/css/bookmark.css
+++ b/Pilloud/src/main/webapp/resources/css/bookmark.css
@@ -1,51 +1,110 @@
 @charset "EUC-KR";
-
 html, body {
-	border-left: solid 1px #ddd;
-	border-right: solid 1px #ddd;
+	border-left-width: 1px;
+	border-left-style: solid;
+	border-left-color: #ddd;
+	border-right-width: 1px;
+	border-right-style: solid;
+	border-right-color: #ddd;
 	margin: 0 auto;
 	width: 500px;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;  
+	
+	-ms-overflow-style: none;
 }
 
+::-webkit-scrollbar {
+	display: none;
+} 
+
+hr {
+	border-width : 1px 0px 0px 0px; 
+	border-style : solid;
+	border-color: lightgrey;
+	height : 1px;
+	margin-bottom: 0;
+}
 header {
 	position: fixed;
 	top: 0;
 	height: 50px;
-	width: 500px;
-	background-color: white;
-	border-bottom : 1px solid lightgrey;
+	width: 499px;
+	background-color: #C4D89D;
+}
+
+input {
+	padding: 8px 8px 8px 12px;
+	margin: 10px 10px 0px 10px;
+	width: 380px;
+	float: right;
+	border-radius: 10px;
+	border: 1px solid #C4D89D;
 }
 
 #arrow {
 	float: left;
-	width: 25px;
+	width: 25px;  
 	height: 20px;
-	margin: 16px 0px 10px 15px;
+	margin: 6px 0px 10px 15px;
 }
-
-.title {
-	float : right;
-	margin : 15px 170px 0px 0px;
+p {
+	font-size : 12px;
+	text-align : right;
+	display:inline-block;
+	/* border-bottom:1px solid lightgrey; */
+	width : 100%;
+	/* padding : 0px 0px 10px 0px; */
+	margin-bottom: 4px;
+}
+#pillList ul{
+	list-style:none;
+	display : block;
+	padding : 0px 0px 10px 20px;
+}
+#pillList ul li {
+	display : inline-block;
+}
+#pillList .title {
+	font-size: small;
 	font-weight: bold;
+	width: 300px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: inline-block;
 }
-
-/* h3 {
- 	text-align: center;
- 	display: inline-block;
-	left: 50%;
-	right: 50%;
+#pillList #next {
+	margin-left: 10px;
+	margin-bottom: 13px;
+/* 	display : inline-block; */
+}
+.company {
+	text-align : left;
+	margin-left : 50px;
+	font-size : 13px;
+}
+.title {
+	text-align : left;
+	margin-left : 50px;
+	margin-top:10px;
+	font-size : 20px;
+	font-weight : bold;
+}
+/* #next {
+	margin-left:170px;
+	margin-bottom : 10px;
 } */
 
-/* img {
-	position: relative;
-	width: 40px;
-	height: 40px;
- 	top: 10px;
-	left: -200px;
-} */
-
+#icon {
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	top: 18px;
+	right: 20px;
+	margin: 0;
+}
+ 
 footer {
 	position: fixed;
 	bottom: 0;
@@ -57,3 +116,10 @@ footer img {
 	width: 50px;
 	margin: 0px 0px 0px 10px;
 }
+
+.home {
+	width: 50px;
+	margin: 0px 0px 0px 10px;
+}
+
+
