--- a/Pilloud/src/main/webapp/resources/css/notice.css
+++ b/Pilloud/src/main/webapp/resources/css/notice.css
@@ -1,43 +1,76 @@
 html, body {
-	border-left-width: 1px;
-	border-left-style: solid;
-	border-left-color: #ddd;
-	border-right-width: 1px;
-	border-right-style: solid;
-	border-right-color: #ddd;
+	border-left: solid 1px #ddd;
+	border-right: solid 1px #ddd;
 	margin: 0 auto;
 	width: 500px;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;
+	
+	-ms-overflow-style: none;
 }
-.top {
-	position: fixed;
+
+::-webkit-scrollbar {
+	display: none;
+} 
+
+header {
+ 	position: fixed;
 	top: 0;
 	height: 50px;
-	width: 500px;
-	background-color: white;
-	border-bottom : 1px solid lightgrey;
+	width: 499px;
+	background-color: #C4D89D;
 }
 #arrow {
 	float: left;
 	width: 25px;
 	height: 20px;
-	margin: 16px 0px 10px 15px;
+	margin: 18px 0px 10px 15px;
 }
 .title {
 	float : right;
-	margin : 15px 225px 0px 0px;
+	margin : 15px 200px 0px 0px;
+	color : #ffffff;
 }
 
 .nlist {
-	margin-top : 50px;
+ 	margin-top : 70px;
 }
+
+ul {
+	list-style: none;
+	margin: 20px 0;
+	padding: 10px 0 10px 20px;
+	display : block;
+}
+
+#title {
+	display: inline-block;
+ 	font-weight: bold;
+ 	width: 400px;
+ 	margin-right: 30px;
+}
+
+li {
+	display: inline-block;
+}
+
+p {
+	margin-top: 25px;	
+	margin-bottom: 0;
+}
+
+#down {
+	width: 20px;
+	height: 20px;
+ 	margin-left: 10px;
+} 
 
 .footer {
 	position: fixed;
 	bottom: 0;
 	height: 70px;
-	width: 500px;
+	width: 499px;
+	background-color: #ffffff;
 }
 
 .home {
