--- a/Pilloud/src/main/webapp/resources/css/list.css
+++ b/Pilloud/src/main/webapp/resources/css/list.css
@@ -60,7 +60,9 @@ p {
 #pillList ul{
 	list-style:none;
 	display : block;
-	padding : 5px 0px 5px 30px;
+	padding : 5px 0px 5px 20px;
+	margin-top: 19px;
+	margin-bottom: 18px;
 }
 #pillList ul li {
 	display : inline-block;
@@ -77,7 +79,18 @@ p {
 #pillList #next {
 	margin-left: 10px;
 	margin-bottom: 13px;
-/* 	display : inline-block; */
+}
+#pillList #bookmarkBtn {
+	background-color: #C4D89D;
+	color: #ffffff;
+	border: none;
+	display: inline-block;
+	padding: 5px 10px;
+	border-radius: 5px;
+ 	font-weight: 600;
+ 	font-size: 11px;
+ 	width: 80px;
+/*  	height: 27px; */
 }
 .company {
 	text-align : left;
@@ -91,10 +104,6 @@ p {
 	font-size : 20px;
 	font-weight : bold;
 }
-/* #next {
-	margin-left:170px;
-	margin-bottom : 10px;
-} */
 
 #icon {
 	position: absolute;
