--- a/Pilloud/src/main/webapp/resources/css/pillSear.css
+++ b/Pilloud/src/main/webapp/resources/css/pillSear.css
@@ -60,7 +60,7 @@ p {
 	list-style:none;
 	display : block;
 	padding : 5px 0px 5px 20px;
-	margin-top: 20px;
+	margin-top: 19px;
 	margin-bottom: 18px;
 }
 #pillList ul li {
@@ -87,8 +87,9 @@ p {
 	padding: 5px 10px;
 	border-radius: 5px;
  	font-weight: 600;
- 	font-size: x-small;
+ 	font-size: 11px;
  	width: 80px;
+/*  	height: 26px; */
 }
 .company {
 	text-align : left;
