--- a/Pilloud/src/main/webapp/resources/css/news.css
+++ b/Pilloud/src/main/webapp/resources/css/news.css
@@ -8,14 +8,19 @@ html, body {
 	margin: 0 auto;
 	width: 500px;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;  
+	
+	-ms-overflow-style: none;
 }
+::-webkit-scrollbar {
+	display: none;
+} 
 header {
 	position: fixed;
 	top: 0;
 	height: 50px;
 	width: 500px;
-	background-color: white;
+	background-color: #C4D89D;
 	border-bottom : 1px solid lightgrey;
 }
 #arrow {
@@ -27,18 +32,53 @@ header {
 .title {
 	float : right;
 	margin : 15px 225px 0px 0px;
+	font-weight : bold;
+	color : white;
 }
 .clist {
-	margin-top : 27px;
+	margin-top : 50px;
+	overflow : hidden;
+	min-height : 100%;
 }
-footer {
+.clist ul li {
+	float : left;
+	list-style-type : none;
+	display : inline-block;
+}
+.clist img {
+	width : 125px;
+	height : 75px;
+	margin-top:5px;
+}
+.clist hr {
+	width : 100%;
+	border : 1px solid #D3D3D3;
+}
+.ntitle {
+	text-align : left;
+	margin : 27px 0px 0px 10px;
+	font-size : 16px;
+	font-weight : bold;
+	overflow : hidden;
+}
+.ndate {
+	float : right;
+	font-size : 13px;
+	margin:12px 0px 25px 250px;
+}
+.wrap {
+	padding-bottom:70px;
+}
+/* footer */
+.footer {
 	position: fixed;
 	bottom: 0;
 	height: 70px;
-	width: 500px;
+	width: 499px;
+	background-color: #ffffff;
 }
 
-footer img {
+.home {
 	width: 50px;
 	margin: 0px 0px 0px 10px;
 }
