--- a/Pilloud/src/main/webapp/resources/css/news.css
+++ b/Pilloud/src/main/webapp/resources/css/news.css
@@ -49,6 +49,8 @@ header {
 	width : 125px;
 	height : 75px;
 	margin-top:5px;
+	object-fit : cover;
+	/* object-fit : fill; */
 }
 .clist hr {
 	width : 100%;
