--- a/Pilloud/src/main/webapp/resources/css/detailPage.css
+++ b/Pilloud/src/main/webapp/resources/css/detailPage.css
@@ -99,11 +99,11 @@ hr {
 }
 
 .footer {
-	background-color: white;
 	position: fixed;
 	bottom: 0;
 	height: 70px;
-	width: 500px;
+	width: 499px;
+	background-color: #ffffff;
 }
 
 .home {
